# OEngine

./: .clang-format  .gitignore  CMakeLists.txt  vcpkg.json
cmake/: FindSDL2.cmake  FindSDL2TTF.cmake  FindSDL2_image.cmake  OEngineConfig.cmake.in
docs/: Doxyfile  random.txt
src/: TestScene.cpp  TestScene.h
src/AssetManager/: FontManager.cpp  FontManager.h  TextureCache.cpp  TextureManager.cpp  TextureManager.h
src/Components/: Animation.cpp  Animation.h  Collider.cpp  Collider.h  Component.h  Delay.cpp  Delay.h  MultiSprite.cpp  MultiSprite.h  PrimitiveSprite.cpp  PrimitiveSprite.h  PropertyChangeListener.cpp  PropertyChangeListener.h  Sprite.cpp  Sprite.h  Transform.cpp  Transform.h
src/Core/: Engine.cpp  Engine.h  GameObject.cpp  GameObject.h  GameObject.tpp  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Sprite.cpp  Sprite.h  Window.cpp  Window.h
src/Events/: Event.cpp  Event.h  EventManager.cpp  EventManager.h
src/GameObjects/: Camera.cpp  Camera.h  PrimitiveFactory.cpp  PrimitiveFactory.h
src/IO/: Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  Screen.cpp  Screen.h  TextInput.cpp  TextInput.h
src/UI/Objects/: Button.cpp  Button.h
src/Utils/: Color.cpp  Color.h  Keys.cpp  Keys.h  SDLDeleter.h  Viewport.cpp  Viewport.h
testGame/: Plane.cpp  Plane.h  PlaneController1.cpp  PlaneController1.h  PlaneController2.cpp  PlaneController2.h  TestScene.cpp  TestScene.h  main.cpp
tests/: CMakeLists.txt  TestEngine.cpp  TestKeyboard.cpp  TestKeys.cpp  TestMouse.cpp  TestPrimitiveFactory.cpp  TestTransform.cpp
